# digamma

./: digamma.cabal
Math/: Digamma.hs
Numeric/: Digamma.hs
